Feature: Ajout de l'asynchronisation avec Kafka